--- a/spago.yaml
+++ b/spago.yaml
@@ -4,6 +4,8 @@ workspace:
   extraPackages:
     yoga-json:
       path: ../purescript-yoga-json
+    vitest:
+      path: ../purescript-vitest
 
 package:
   name: yoga-http-api
@@ -32,3 +34,12 @@ package:
     - unsafe-coerce: ">=6.0.0 <7.0.0"
     - variant: ">=8.0.0 <9.0.0"
     - yoga-json: ">=5.0.0 <6.0.0"
+  test:
+    main: Test.Operators
+    dependencies:
+      - vitest: ">=1.0.0 <2.0.0"
+      - console: ">=6.0.0 <7.0.0"
+      - foreign-object: ">=4.0.0 <5.0.0"
+      - arrays: ">=7.0.0 <8.0.0"
+      - strings: ">=6.0.0 <7.0.0"
+      - integers: ">=6.0.0 <7.0.0"
