--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "jsdom": "^24.0.0",
+    "openapi-schema-validator": "^12.1.3",
     "purescript": "^0.15.15",
     "spago": "^1.0.3",
     "vitest": "^1.0.0"
