--- a/spago.yaml
+++ b/spago.yaml
@@ -13,6 +13,7 @@ package:
       githubOwner: rowtype-yoga
       githubRepo: purescript-yoga-http-api
   dependencies:
+    - identity
     - aff: ">=8.0.0 <9.0.0"
     - arrays: ">=7.3.0 <8.0.0"
     - either: ">=6.1.0 <7.0.0"
@@ -20,18 +21,16 @@ package:
     - foreign: ">=7.0.0 <8.0.0"
     - foreign-object: ">=4.1.0 <5.0.0"
     - integers: ">=6.0.0 <7.0.0"
-    - literals: ">=1.0.2 <2.0.0"
     - maybe: ">=6.0.0 <7.0.0"
     - newtype: ">=5.0.0 <6.0.0"
     - prelude: ">=6.0.2 <7.0.0"
     - record: ">=4.0.0 <5.0.0"
     - strings: ">=6.0.1 <7.0.0"
     - tuples: ">=7.0.0 <8.0.0"
+    - undefined-is-not-a-problem: ">=1.1.0 <2.0.0"
     - unsafe-coerce: ">=6.0.0 <7.0.0"
-    - untagged-union: ">=1.0.0 <2.0.0"
     - variant: ">=8.0.0 <9.0.0"
     - yoga-json: ">=5.1.0 <6.0.0"
-    - undefined-is-not-a-problem: ">=1.1.0 <2.0.0"
     - yoga-options: ">=0.1.0 <1.0.0"
   test:
     main: Test.Operators
