--- a/spago.yaml
+++ b/spago.yaml
@@ -3,12 +3,13 @@ workspace:
     registry: 73.0.0
   extraPackages:
     yoga-options: "0.1.0"
-    compile-fail: "0.2.0"
+    compile-fail:
+      path: ../purescript-compile-fail
 
 package:
   name: yoga-http-api
   publish:
-    version: 0.1.6
+    version: 0.2.0
     license: MIT
     location:
       githubOwner: rowtype-yoga
